Trivial refactor: use collection factory call instead