@@ -256,10 +256,8 @@ public class GroovyScriptEngineFactory implements ScriptEngineFactory {
     private static final List<String> MIME_TYPES;
 
     static {
-        List<String> n = new ArrayList<String>(2);
-        n.add(SHORT_NAME);
-        n.add(LANGUAGE_NAME);
-        NAMES = Collections.unmodifiableList(n);
+        List<String> n;
+        NAMES = List.of(SHORT_NAME, LANGUAGE_NAME);
 
         n = new ArrayList<String>(1);
         n.add("groovy");
